Update kong.conf: enable pg_ssl and adjust settings

--- a/kong.conf
+++ b/kong.conf
@@ -8,6 +8,7 @@ pg_ssl_verify = off
 # Admin API - admin_listen is set in the bootstrap script via env variable as $PORT is not substituted
 # admin_listen = 0.0.0.0:${PORT}
 proxy_listen = off
+admin_gui_listen = off
 
 # Logging
 log_level = notice
